[package]
name = "cat-dev"
description = "A library for interacting with the CAT-DEV hardware units distributed by Nintendo (i.e. a type of Wii-U DevKits)."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
configparser = "^3.0.4"
fnv.workspace = true
futures = "^0.3.30"
mac_address.workspace = true
miette.workspace = true
network-interface.workspace = true
thiserror = "^1.0.56"
tracing.workspace = true
tokio.workspace = true
valuable.workspace = true

[dev-dependencies]
once_cell.workspace = true
tempfile = "^3.9.0"