[package]
name = "cat-dev"
description = "A library for interacting with the CAT-DEV hardware units distributed by Nintendo (i.e. a type of Wii-U DevKits)."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
configparser = "^3.0.4"
# Keep us equal with tonic, which is pulled in through tokio console in `log`.
hyper = { version = "^0.14.28", features = ["http1", "client", "runtime", "stream"] }
fnv.workspace = true
futures = "^0.3.30"
local-ip-address = "^0.5.7"
mac_address.workspace = true
miette.workspace = true
network-interface.workspace = true
serde = "^1.0.196"
serde_urlencoded = "^0.7.1"
thiserror = "^1.0.57"
tracing.workspace = true
tokio.workspace = true
valuable.workspace = true

[dev-dependencies]
once_cell.workspace = true
tempfile = "^3.10.0"