[package]
name = "log"
description = "A small wrapper around logging initialization."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
# This is just our logging crate, don't publish it.
publish = false

[dependencies]
console-subscriber = { version = "^0.2.0", default-features = false, features = ["env-filter", "parking_lot"] }
miette.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-error = "^0.2.0"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json", "valuable"] }